--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,23 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;/* contain padding and marging and border*/
-  }
-  
-  #canvas1{
-    border: 5px solid black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #4d79bc;
-    max-width: 100%;
-    max-height: 100%;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; /* contain padding and marging and border*/
+}
+
+#canvas1 {
+  border: 5px solid black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #4d79bc;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+#layer1,
+#layer2,
+#layer3,
+#layer4 {
+  display: none;
+}
